alignment issue in profile page fixed

--- a/src/components/css/user_details.css
+++ b/src/components/css/user_details.css
@@ -15,8 +15,12 @@
     height: 550px;
 }
 
+
+.profile-img{
+    display: flex;
+    justify-content: center;
+}
 .avatar {
-    margin-left: 150px;
     margin-top: -200px;
     width: 340px;
     height: 340px;
@@ -50,6 +54,7 @@ h1 {
     width: 181px;
     height: 50px
 }
+
 
 @media screen and (max-width: 476px) {
    
